адаптив страниц category и product, исправлена карусель на главной странице

--- a/app/index.html
+++ b/app/index.html
@@ -79,49 +79,58 @@
         <section class="items-carousel flex-container align-center">
             <div class="container">
                 <div class="item-flexslider">
-                    <ul class="slides">
-                        <li>
-                            <div class="items-carousel-description">
-                                <div class="title big orange-text">
-                                    <span>FULL WINTER KIT</span>
+                    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                    <!-- Indicators -->
+                        <ol class="carousel-indicators">
+                            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                        </ol>
+
+                    <!-- Wrapper for slides -->
+                        <div class="carousel-inner">
+                            <div class="item active">
+                                <div class="items-carousel-description">
+                                    <div class="title big orange-text">
+                                        <span>FULL WINTER KIT</span>
+                                    </div>
+                                    <h6>Half Jacket + Skiny Trousers + Boot leather</h6>
+                                    <span class="subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry</span>
+                                    <div class="items-carousel-price">   
+                                        <span>Price : 120$</span>
+                                        <div class="carousel-icon icon-cart-hover-ic"></div><span class="orange-text">Order now</span>
+                                    </div> 
                                 </div>
-                                <h6>Half Jacket + Skiny Trousers + Boot leather</h6>
-                                <span class="subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry</span>
-                                <div class="items-carousel-price">   
-                                    <span>Price : 120$</span>
-                                    <div class="carousel-icon icon-cart-hover-ic"></div><span class="orange-text">Order now</span>
-                                </div> 
                             </div>
-                        </li>
-                        <li>
-                            <div class="items-carousel-description">
-                                <div class="title big orange-text">
-                                    <span>FULL WINTER KIT</span>
+                            <div class="item">
+                                <div class="items-carousel-description">
+                                    <div class="title big orange-text">
+                                        <span>FULL WINTER KIT</span>
+                                    </div>
+                                    <h6>Half Jacket + Skiny Trousers + Boot leather</h6>
+                                    <span class="subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry</span>
+                                    <div class="items-carousel-price">   
+                                        <span>Price : 120$</span>
+                                        <div class="carousel-icon icon-cart-hover-ic"></div><span class="orange-text">Order now</span>
+                                    </div> 
                                 </div>
-                                <h6>Half Jacket + Skiny Trousers + Boot leather</h6>
-                                <span class="subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry</span>
-                                <div class="items-carousel-price">   
-                                    <span>Price : 120$</span>
-                                    <div class="carousel-icon icon-cart-hover-ic"></div><span class="orange-text">Order now</span>
-                                </div> 
                             </div>
-                        </li>
-                        <li>
-                            <div class="items-carousel-description">
-                                <div class="title big orange-text">
-                                    <span>FULL WINTER KIT</span>
+                            <div class="item">
+                                <div class="items-carousel-description">
+                                    <div class="title big orange-text">
+                                        <span>FULL WINTER KIT</span>
+                                    </div>
+                                    <h6>Half Jacket + Skiny Trousers + Boot leather</h6>
+                                    <span class="subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry</span>
+                                    <div class="items-carousel-price">   
+                                        <span>Price : 120$</span>
+                                        <div class="carousel-icon icon-cart-hover-ic"></div><span class="orange-text">Order now</span>
+                                    </div> 
                                 </div>
-                                <h6>Half Jacket + Skiny Trousers + Boot leather</h6>
-                                <span class="subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry</span>
-                                <div class="items-carousel-price">   
-                                    <span>Price : 120$</span>
-                                    <div class="carousel-icon icon-cart-hover-ic"></div><span class="orange-text">Order now</span>
-                                </div> 
                             </div>
-                        </li>
-                    </ul>
-                </div>
-                    
+                        </div>
+                    </div>   
+                </div>    
             </div>
         </section>
         <section class="default-section">
@@ -133,7 +142,7 @@
                 <div class="new-item">
                     <div class="row">
                         <div class="col-md-3 col-sm-6">
-                            <div class="item">
+                            <div class="item-product">
                                 <div class="item-img">
                                     <a href="product.html"><img src="img/product-Img.png"></a>
                                 </div>
@@ -164,7 +173,7 @@
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
-                            <div class="item">
+                            <div class="item-product">
                                 <div class="item-img">
                                     <a href="product.html"><img src="img/item-img-2.png"></a>
                                 </div>
@@ -195,7 +204,7 @@
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
-                            <div class="item">
+                            <div class="item-product">
                                 <div class="item-img">
                                     <a href="product.html"><img src="img/item-img-3.png"></a>
                                 </div>
@@ -226,7 +235,7 @@
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
-                            <div class="item">
+                            <div class="item-product">
                                 <div class="item-img">
                                     <a href="product.html"><img src="img/item-img-3.png"></a>
                                 </div>
