--- a/app/product.html
+++ b/app/product.html
@@ -80,6 +80,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-5">
+                    <div class="title big orange-text hidden-lg hidden-md text-center">
+                        <span>FULL WINTER KIT</span>
+                    </div>
                     <div class="product-carousel center-block">
                         <div class="flexslider">
                             <ul class="slides">
@@ -98,14 +101,14 @@
                 </div>
                 <div class="col-md-7">
                     <div class="product-description">
-                        <div class="title big orange-text">
+                        <div class="title big orange-text hidden-sm hidden-xs">
                             <span>FULL WINTER KIT</span>
                         </div>
                         <h6>Half Jacket + Skiny Trousers + Boot leather</h6>
                         <span class="subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry</span>
                         <div class="order-info">
                             <div class="order-form">
-                                <form id="product-option" class="flex-container justify-sp-between">
+                                <form id="product-option" class="flex-container justify-sp-between flex-wrap">
                                     <div class="chose-size flex-container align-center">
                                         <span>Choose Size</span>
                                         <div class="size-radio-btn-group flex-container align-center">
@@ -129,11 +132,11 @@
                                     </div>
                                     <div class="quantity flex-container align-center">
                                         <span>Choos Quantity</span>
-                                        <input type="number" name="quantity"  class="custom-number">
+                                        <input type="number" name="quantity"  class="custom-number" min="1" value="1">
                                     </div>
                                 </form>
                             </div>
-                            <div class="order-now flex-container align-center justify-sp-between">
+                            <div class="order-now flex-container align-center justify-sp-between flex-wrap">
                                 <div class="product-price">
                                     <span>Price : 120$</span>
                                 </div>
@@ -159,7 +162,7 @@
             <div class="related-product">
                 <div class="row">
                     <div class="col-md-3">
-                        <div class="item">
+                        <div class="item-product">
                             <div class="item-img">
                                 <a href="product.html"><img src="img/item-img-3.png"></a>
                             </div>
@@ -190,7 +193,7 @@
                         </div>
                     </div>
                     <div class="col-md-3">
-                        <div class="item">
+                        <div class="item-product">
                             <div class="item-img">
                                 <a href="product.html"><img src="img/item-img-2.png"></a>
                             </div>
@@ -221,7 +224,7 @@
                         </div>
                     </div>
                     <div class="col-md-3">
-                        <div class="item">
+                        <div class="item-product">
                             <div class="item-img">
                                 <a href="product.html"><img src="img/product-Img.png"></a>
                             </div>
@@ -252,7 +255,7 @@
                         </div>
                     </div>
                     <div class="col-md-3">
-                        <div class="item">
+                        <div class="item-product">
                             <div class="item-img">
                                 <a href="product.html"><img src="img/item-img-3.png"></a>
                             </div>
