--- a/app/category.html
+++ b/app/category.html
@@ -78,8 +78,12 @@
     <main>
         <div class="category-wrap">
             <div class="container">
+                <div class="mobile-sidebar-btn">
+                    <i class="fa fa-arrow-circle-right"></i>
+                </div>
+                <div class="overlay"></div>
                 <div class="row">
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-xs-12 mobile-sidebar-wrap">
                         <aside class="sidebar">
                             <div class="aside-section white-bg">
                                 <div class="aside-section-title">
@@ -160,8 +164,8 @@
                     </div>
                     <div class="col-md-9">
                         <div class="row">
-                            <div class="col-md-4">
-                                <div class="item">
+                            <div class="col-sm-4">
+                                <div class="item-product">
                                     <div class="item-img">
                                         <a href="product.html"><img src="img/item-img-2.png"></a>
                                     </div>
@@ -191,8 +195,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-4">
-                                <div class="item">
+                            <div class="col-sm-4">
+                                <div class="item-product">
                                     <div class="item-img">
                                         <a href="product.html"><img src="img/product-Img.png"></a>
                                     </div>
@@ -222,8 +226,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-4">
-                                <div class="item">
+                            <div class="col-sm-4">
+                                <div class="item-product">
                                     <div class="item-img">
                                         <a href="product.html"><img src="img/item-img-3.png"></a>
                                     </div>
@@ -255,8 +259,8 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-4">
-                                <div class="item">
+                            <div class="col-sm-4">
+                                <div class="item-product">
                                     <div class="item-img">
                                         <a href="product.html"><img src="img/item-img-2.png"></a>
                                     </div>
@@ -286,8 +290,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-4">
-                                <div class="item">
+                            <div class="col-sm-4">
+                                <div class="item-product">
                                     <div class="item-img">
                                         <a href="product.html"><img src="img/product-Img.png"></a>
                                     </div>
@@ -317,8 +321,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-4">
-                                <div class="item">
+                            <div class="col-sm-4">
+                                <div class="item-product">
                                     <div class="item-img">
                                         <a href="product.html"><img src="img/item-img-3.png"></a>
                                     </div>
@@ -350,8 +354,8 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-4">
-                                <div class="item">
+                            <div class="col-sm-4">
+                                <div class="item-product">
                                     <div class="item-img">
                                         <a href="product.html"><img src="img/item-img-2.png"></a>
                                     </div>
@@ -381,8 +385,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-4">
-                                <div class="item">
+                            <div class="col-sm-4">
+                                <div class="item-product">
                                     <div class="item-img">
                                         <a href="product.html"><img src="img/product-Img.png"></a>
                                     </div>
@@ -412,8 +416,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-4">
-                                <div class="item">
+                            <div class="col-sm-4">
+                                <div class="item-product">
                                     <div class="item-img">
                                         <a href="product.html"><img src="img/item-img-3.png"></a>
                                     </div>
