--- a/app/category.html
+++ b/app/category.html
@@ -90,10 +90,10 @@
                                     <span>Categories</span>
                                 </div>
                                 <ul class="category-list">
-                                    <li>Man</li>
-                                    <li>Women</li>
-                                    <li>Childrens</li>
-                                    <li>Hot Deals</li>
+                                    <li><a href="">Man</a></li>
+                                    <li><a href="">Women</a></li>
+                                    <li><a href="">Childrens</a></li>
+                                    <li><a href="">Hot Deals</a></li>
                                 </ul>
                             </div>
                             <div class="aside-section white-bg">
