--- a/app/index.html
+++ b/app/index.html
@@ -96,9 +96,11 @@
                                     </div>
                                     <h6>Half Jacket + Skiny Trousers + Boot leather</h6>
                                     <span class="subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry</span>
-                                    <div class="items-carousel-price">   
-                                        <span>Price : 120$</span>
-                                        <div class="carousel-icon icon-cart-hover-ic"></div><span class="orange-text">Order now</span>
+                                    <div class="items-carousel-price">
+                                        <a href="">
+                                            <span>Price : 120$</span>
+                                            <div class="carousel-icon icon-cart-hover-ic"></div><span class="orange-text">Order now</span>
+                                        </a>
                                     </div> 
                                 </div>
                             </div>
@@ -109,9 +111,11 @@
                                     </div>
                                     <h6>Half Jacket + Skiny Trousers + Boot leather</h6>
                                     <span class="subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry</span>
-                                    <div class="items-carousel-price">   
-                                        <span>Price : 120$</span>
-                                        <div class="carousel-icon icon-cart-hover-ic"></div><span class="orange-text">Order now</span>
+                                    <div class="items-carousel-price">
+                                        <a href="">
+                                            <span>Price : 120$</span>
+                                            <div class="carousel-icon icon-cart-hover-ic"></div><span class="orange-text">Order now</span>
+                                        </a>
                                     </div> 
                                 </div>
                             </div>
@@ -122,9 +126,11 @@
                                     </div>
                                     <h6>Half Jacket + Skiny Trousers + Boot leather</h6>
                                     <span class="subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry</span>
-                                    <div class="items-carousel-price">   
-                                        <span>Price : 120$</span>
-                                        <div class="carousel-icon icon-cart-hover-ic"></div><span class="orange-text">Order now</span>
+                                    <div class="items-carousel-price">
+                                        <a href="">
+                                            <span>Price : 120$</span>
+                                            <div class="carousel-icon icon-cart-hover-ic"></div><span class="orange-text">Order now</span>
+                                        </a>
                                     </div> 
                                 </div>
                             </div>
@@ -320,10 +326,10 @@
                         <div class="item-mini">
                             <div class="flex-container">
                                 <div class="item-mini-img">
-                                    <img src="img/item-img-1-min.png">
+                                    <a href="product.html"><img src="img/item-img-1-min.png"></a>
                                 </div>
                                 <div class="item-mini-description">
-                                    <span class="item-mini-title">Reebok Track Jacket</span>
+                                    <span class="item-mini-title"><a href="product.html">Reebok Track Jacket</a></span>
                                     <div class="item-mini-info flex-container orange-text justify-sp-between align-center">
                                         <ul class="item-mini-stars flex-container">
                                             <li><i class="fa fa-star"></i></li>
@@ -335,7 +341,7 @@
                                     </div>
                                     <div class="add-to-cart-hover flex-container align-center">
                                         <div class="icon-add-to-cart-hover-ic"></div>
-                                        <span class="orange-text">add to cart</span>
+                                        <span class="orange-text"><a href="product.html"> add to cart</a></span>
                                     </div>
                                 </div>
                             </div>
@@ -345,10 +351,10 @@
                         <div class="item-mini">
                             <div class="flex-container">
                                 <div class="item-mini-img">
-                                    <img src="img/item-img-1-min.png">
+                                    <a href="product.html"><img src="img/item-img-1-min.png"></a>
                                 </div>
                                 <div class="item-mini-description">
-                                    <span class="item-mini-title">Reebok Track Jacket</span>
+                                    <span class="item-mini-title"><a href="product.html">Reebok Track Jacket</a></span>
                                     <div class="item-mini-info flex-container orange-text justify-sp-between align-center">
                                         <ul class="item-mini-stars flex-container">
                                             <li><i class="fa fa-star"></i></li>
@@ -360,7 +366,7 @@
                                     </div>
                                     <div class="add-to-cart-hover flex-container align-center">
                                         <div class="icon-add-to-cart-hover-ic"></div>
-                                        <span class="orange-text">add to cart</span>
+                                        <span class="orange-text"><a href="product.html"> add to cart</a></span>
                                     </div>
                                 </div>
                             </div>
@@ -370,10 +376,10 @@
                         <div class="item-mini">
                             <div class="flex-container">
                                 <div class="item-mini-img">
-                                    <img src="img/item-img-1-min.png">
+                                    <a href="product.html"><img src="img/item-img-1-min.png"></a>
                                 </div>
                                 <div class="item-mini-description">
-                                    <span class="item-mini-title">Reebok Track Jacket</span>
+                                    <span class="item-mini-title"><a href="product.html">Reebok Track Jacket</a></span>
                                     <div class="item-mini-info flex-container orange-text justify-sp-between align-center">
                                         <ul class="item-mini-stars flex-container">
                                             <li><i class="fa fa-star"></i></li>
@@ -385,7 +391,7 @@
                                     </div>
                                     <div class="add-to-cart-hover flex-container align-center">
                                         <div class="icon-add-to-cart-hover-ic"></div>
-                                        <span class="orange-text">add to cart</span>
+                                        <span class="orange-text"><a href="product.html"> add to cart</a></span>
                                     </div>
                                 </div>
                             </div>
