--- a/app/product.html
+++ b/app/product.html
@@ -105,7 +105,8 @@
                             <span>FULL WINTER KIT</span>
                         </div>
                         <h6>Half Jacket + Skiny Trousers + Boot leather</h6>
-                        <span class="subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry</span>
+                        <p class="subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry
+                            Lorem Ipsum is simply dummy text of the printing <br>and typesetting industry</p>
                         <div class="order-info">
                             <div class="order-form">
                                 <form id="product-option" class="flex-container justify-sp-between flex-wrap">
